Branches can loop to the same node if int. path.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 								ctx.stroke();
 								
 								// Draw variable name
-								if (nodes[i] == nodes[k]) {
+								if (nodes[i] == nodes[k] && nodes[i].branches[j].path.length == 0) {
 									// Do nothing since origin node is same as dest node.
 								}
 								else if (nodes[i].branches[j].path.length == 0) {
